Fix image sizing on firefox (#1)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -244,6 +244,7 @@ Character
 	object-fit: contain;
 	height: auto;
 	width: -webkit-fill-available;
+	width: -moz-available;
 }
 .character > .characterName {
 	grid-area: name;
